syntax = "proto3";
option csharp_namespace = "JetSetGo.UsersManagement.Grpc";
package routes;

message HostGradeRequest{
  string guestId =1;
  string hostId = 2;
  int32 number= 3;
}
message  CreateHostGradeRequest{HostGradeRequest grade =1;}
message CreateHostGradeResponse{bool success =1;}

service GradeApp{
  rpc CreateGradeForHost(CreateHostGradeRequest) returns (CreateHostGradeResponse){
  }
}